--- a/home/templates/userside/detail.html
+++ b/home/templates/userside/detail.html
@@ -2,6 +2,7 @@
 {% block navbar%}{% endblock navbar%}
 
 {% block content%}
+<div id="alertContainer"></div>
 
 
     <!-- Shop Detail Start -->
@@ -131,7 +132,7 @@
                     </div>
                         
                     <div class="outofstock" style="display:none;">
-                        <button class="btn btn-danger px-3" ><i class="fa fa-shopping-cart mr-1"></i> Out Of Stock</button>
+                        <button class="btn btn-danger px-3">Out Of Stock</button>
                     </div>
                     
                     </div>
@@ -400,7 +401,10 @@
                 });
             }
         });
+        $('.outofstock').click(function() {
 
+            alert("product is out of stock")
+        });
  //Script for adding product to cart
  $('#addToCartBtn').click(function() {
     var colorId = $('input[name="color"]:checked').val();
