--- a/adminapp/templates/adminside/orderlist.html
+++ b/adminapp/templates/adminside/orderlist.html
@@ -98,9 +98,32 @@
                                         <form action="{% url 'update_status' order.id %}" method="post">
                                         {% csrf_token %}
                                         <select  class="btn btn-info dropdown-toggle"  name="status">
-                                          {% for choice in status_choices %}
-                                          <option    value="{{ choice.0 }}" {% if order.status == choice.0 %} selected {% endif %}>{{ choice.1 }}</option>
+                                            {% if order.status == 'Pending'%}
+                                          {% for choice in pending_status_choices %}
+                                          <option    value = "{{ choice.0 }}" {% if order.status == choice.0 %} selected {% endif %}>{{ choice.1 }}</option>
                                           {% endfor %}
+                                          {% elif order.status == 'Delivered'%}
+                                          {% for choice in delivered_status_choices %}
+                                          <option    value = "{{ choice.0 }}" {% if order.status == choice.0 %} selected {% endif %}>{{ choice.1 }}</option>
+                                          {% endfor %}
+                                          {% elif order.status == 'Shipped'%}
+                                          {% for choice in shipped_status_choices %}
+                                          <option    value = "{{ choice.0 }}" {% if order.status == choice.0 %} selected {% endif %}>{{ choice.1 }}</option>
+                                          {% endfor %}
+                                          {% elif order.status == 'Confirmed'%}
+                                          {% for choice in confirm_status_choices %}
+                                          <option    value = "{{ choice.0 }}" {% if order.status == choice.0 %} selected {% endif %}>{{ choice.1 }}</option>
+                                          {% endfor %}
+                                          {% elif order.status == 'Cancelled'%}
+                                          {% for choice in cancel_status_choices %}
+                                          <option    value = "{{ choice.0 }}" {% if order.status == choice.0 %} selected {% endif %}>{{ choice.1 }}</option>
+                                          {% endfor %}
+                                        
+                                          {% elif order.status == 'Return'%}
+                                          {% for choice in return_status_choices %}
+                                          <option    value = "{{ choice.0 }}" {% if order.status == choice.0 %} selected {% endif %}>{{ choice.1 }}</option>
+                                          {% endfor %}
+                                          {% endif %}
                                         </select>
                                         <button class="btn btn-success m-2 " type="submit">Update</button>
                                       </form> </td>
