user login logic redisigned

--- a/home/templates/userside/index.html
+++ b/home/templates/userside/index.html
@@ -46,7 +46,7 @@
 </style>
 
 <!-- userside/index.html -->
-{% if messages%}
+<!-- {% if messages%}
 {% for message in messages %}
 {% if message.tags is "success" %}
 
@@ -76,7 +76,7 @@
   </div>
     {% endif %}
     {% endfor%}
-    {% endif %}
+    {% endif %} -->
 <div id="header-carousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
         {% for category in categories %}
