added a sample graph to admin

--- a/adminapp/templates/adminside/dashboard.html
+++ b/adminapp/templates/adminside/dashboard.html
@@ -198,16 +198,16 @@
 
                         <a href="javascript:;" data-show="memberreport">
                             <i class="fa fa-files-o"></i>
-                            Member Report
+                            Sales Chart
                             <i class="downarrow fa-solid fa-chevron-down"></i>
                         </a>
 
                         <ul class="submenus" id="memberreport">
 
                             <li>
-                                <a href="">
+                                <a href="{% url 'adminapp:sale_statistics'%}">
                                     <i class="fa fa-square"></i>
-                                  Export Seeker Data
+                                  Best sellers
                                 </a>
                             </li>
 
