best selling product done

--- a/adminapp/templates/adminside/dashboard.html
+++ b/adminapp/templates/adminside/dashboard.html
@@ -207,14 +207,14 @@
                             <li>
                                 <a href="{% url 'adminapp:sale_statistics'%}">
                                     <i class="fa fa-square"></i>
-                                  Best sellers
+                                  Sales Chart
                                 </a>
                             </li>
 
                             <li>
-                                <a href="">
+                                <a href="{% url 'adminapp:top_seller'%}">
                                     <i class="fa fa-square"></i>
-                                  Export Employer  Data
+                                  Top Seller
                                 </a>
                             </li>
 
